# PatchMatch-begin

./: CMakeLists.txt  vcpkg.json
Apps/DemoApp/: CMakeLists.txt
Modules/Libs/Shared/PatchMatch/: Camera.h  CudaPatchMatch.cu  CudaPatchMatch.h  IO.cpp  IO.h  Image.cpp  Image.h  Models.cpp  Models.h  PatchMatch.cpp  PatchMatch.cu  PatchMatch.h  PatchMatchHelper.cpp  PatchMatchHelper.h  Point2D.h  Reconstruction.cpp  Reconstruction.h  Rigid3d.h  endian.h  types.h
Modules/Libs/Shared/PatchMatch/utils/: string.cpp  string.h
Modules/Libs/Static/colmap/mvs/: patch_match.cc  patch_match_cuda.cu
Modules/LibsConfig/: CMakeLists.txt
Tests/: CMakeLists.txt  TEST.cpp  collection_adapters.hpp
